--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
   flex-direction: row;
   justify-content: space-between;
+
   width: 50vw;
   max-width: 700px;
   min-width: 400px;
@@ -141,4 +142,47 @@ body {
   border: 2px solid var(--Header-Outline);
   border-radius: 10px;
   padding: 10px 35px;
+}
+
+.modal {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  will-change: transform, opacity;
+  transform: scale(1.15);
+  transition: transform 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946),
+    opacity 0.1s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+}
+
+.modal.visible {
+  pointer-events: auto;
+  opacity: 1;
+  transform: scale(1);
+  transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946),
+    opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+}
+
+.rules {
+  position: relative;
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+.rules-title {
+  color: var(--Dark-Text);
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+
+#close-toggler {
+  position: absolute;
+  top: 30px;
+  right: 20px;
 }
