--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -35,7 +36,7 @@ body {
   justify-content: space-between;
   width: 50vw;
   max-width: 700px;
-  min-width: 400px;
+  min-width: 570px;
   margin: 38px auto;
   border: 3px solid var(--Header-Outline);
   border-radius: 15px;
@@ -51,10 +52,6 @@ body {
   line-height: 1.6563rem;
 }
 
-.score-item {
-  margin: 12px 30px;
-}
-
 .score {
   display: flex;
   flex-direction: column;
@@ -63,15 +60,13 @@ body {
   background-color: white;
   border-radius: 10px;
   padding: 20px 40px;
-}
-
-#score {
+  margin: 12px 30px;
   color: var(--Dark-Text);
   font-size: 3rem;
   font-weight: 700;
 }
 
-#score-title {
+.score-title {
   color: var(--Score-Text);
   font-size: 0.9rem;
   letter-spacing: 0.1rem;
@@ -85,6 +80,12 @@ body {
   align-items: center;
   justify-content: center;
   padding-top: 7px;
+  cursor: pointer;
+}
+
+.circle:hover {
+  scale: 1.2;
+  transition: all 0.3s;
 }
 
 .mid-circle {
@@ -102,23 +103,36 @@ body {
   height: 90px;
 }
 
-#sccisors-circle {
+.sccisors-circle {
   background-color: hsl(40, 84%, 53%);
   box-shadow: 0px 12px 1px rgb(190, 109, 30);
 }
 
-#rock-circle {
+.rock-circle {
   background-color: hsl(349, 70%, 56%);
   box-shadow: 0 12px 1px hsl(349, 65%, 41%);
 }
 
-#paper-circle {
+.paper-circle {
   background-color: hsl(230, 89%, 65%);
   box-shadow: 0 12px 1px hsl(230, 62%, 53%);
 }
 
+.selected-animation {
+  scale: 1.1;
+  animation-name: zoomIn;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+}
+
+.random-animation {
+  scale: 1.1;
+  animation-name: rollIn;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+}
+
 .choice3-container {
-  display: none;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -185,6 +199,21 @@ body {
     opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 }
 
+.hide {
+  display: none;
+}
+
+.display {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+.flex {
+  display: flex;
+}
+
 .rules {
   position: relative;
   background-color: white;
@@ -206,7 +235,6 @@ body {
 }
 
 .playground {
-  display: flex;
   justify-content: space-around;
   flex-direction: row;
   letter-spacing: 0.2rem;
@@ -235,8 +263,8 @@ body {
 
 .circle-position {
   position: absolute;
-  top: -20px;
-  left: -30px;
+  top: -32px;
+  left: -28px;
 }
 
 .bigger-circle {
@@ -251,17 +279,12 @@ body {
 
 .result {
   margin: auto 75px;
+  animation-name: delay;
+  animation-duration: 3.5s;
+  animation-timing-function: linear;
 }
 
-.win {
-  display: none;
-}
-
-.lose {
-  display: block;
-}
-
-#play-again {
+.play-again {
   position: relative;
   width: 100%;
   padding: 10px;
@@ -270,9 +293,10 @@ body {
   border: none;
   z-index: 1;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
-#play-again:hover {
+.play-again:hover {
   color: hsl(349, 70%, 56%);
 }
 
@@ -280,9 +304,9 @@ body {
 .animation-lose {
   position: absolute;
   margin: auto;
-  bottom: 0px;
-  top: 20%;
-  left: 50%;
+  bottom: 7px;
+  top: 10%;
+  left: 51%;
   overflow: hidden;
   transform: translate(-50%, 0);
   width: 200px;
@@ -293,14 +317,16 @@ body {
   animation-duration: 1s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
+  animation-timing-function: linear;
+
   z-index: 0;
 }
 
 .animation-win {
   position: absolute;
   margin: auto;
-  bottom: 0px;
-  top: 20%;
+  bottom: 7px;
+  top: 8%;
   left: 50%;
   overflow: hidden;
   transform: translate(-50%, 0);
@@ -312,6 +338,7 @@ body {
   animation-duration: 1s;
   animation-iteration-count: infinite;
   z-index: 0;
+  animation-timing-function: linear;
 }
 
 @keyframes wave {
@@ -362,9 +389,91 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
   }
 
-  100% {
-    width: 450px;
-    height: 450px;
+  95% {
+    width: 400px;
+    height: 400px;
     background-color: rgba(255, 255, 255, 0.1);
+  }
+  100% {
+    width: 425px;
+    height: 425px;
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    scale: 0;
+    opacity: 0;
+  }
+  10% {
+    scale: 0.1;
+    opacity: 0.1;
+  }
+  20% {
+    scale: 0.2;
+    opacity: 0.2;
+  }
+  30% {
+    scale: 0.3;
+    opacity: 0.3;
+  }
+  40% {
+    scale: 0.4;
+    opacity: 0.4;
+  }
+  50% {
+    scale: 0.5;
+    opacity: 0.5;
+  }
+  60% {
+    scale: 0.6;
+    opacity: 0.6;
+  }
+  70% {
+    scale: 0.7;
+    opacity: 0.7;
+  }
+  80% {
+    scale: 0.8;
+    opacity: 0.8;
+  }
+  90% {
+    scale: 0.9;
+    opacity: 0.9;
+  }
+  100% {
+    scale: 1;
+    opacity: 1;
+  }
+}
+
+@keyframes rollIn {
+  0% {
+    opacity: 0;
+    left: 100vw;
+    transform: rotate(1440deg);
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes delay {
+  0% {
+    scale: 0.01;
+    opacity: 0;
+  }
+
+  90% {
+    scale: 0.01;
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
