--- a/style.css
+++ b/style.css
@@ -309,15 +309,16 @@ body {
   left: 51%;
   overflow: hidden;
   transform: translate(-50%, 0);
-  width: 200px;
-  height: 200px;
-  background-color: rgb(255, 255, 255);
+  width: 160px;
+  height: 160px;
+  background-color: rgb(26, 29, 71);
   border-radius: 50%;
   animation-name: wave;
   animation-duration: 1s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  animation-delay: 4s;
 
   z-index: 0;
 }
@@ -330,13 +331,14 @@ body {
   left: 50%;
   overflow: hidden;
   transform: translate(-50%, 0);
-  width: 200px;
-  height: 200px;
-  background-color: rgb(255, 255, 255);
+  width: 160px;
+  height: 160px;
+  background-color: rgb(26, 29, 71);
   border-radius: 50%;
   animation-name: wave;
   animation-duration: 1s;
   animation-iteration-count: infinite;
+  animation-delay: 4s;
   z-index: 0;
   animation-timing-function: linear;
 }
