--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden; /* Hide scrollbars */
 }
 
 .container {
@@ -35,8 +36,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   width: 50vw;
-  max-width: 700px;
-  min-width: 570px;
+  max-width: 896px;
   margin: 38px auto;
   border: 3px solid var(--Header-Outline);
   border-radius: 15px;
@@ -477,5 +477,131 @@ body {
 
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .score-container {
+    width: 70%;
+  }
+  .score {
+    padding: 10px 20px;
+    margin: 10px 12px;
+    font-size: 1.5rem;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    line-height: 0.9;
+  }
+
+  .circle {
+    scale: 0.7;
+  }
+
+  #triangle {
+    scale: 0.9;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .score {
+    padding: 5px 10px;
+    margin: 5px 6px;
+    font-size: 1rem;
+  }
+
+  .title {
+    font-size: 1rem;
+    line-height: 0.8;
+  }
+
+  .line-one {
+    margin-bottom: 0;
+  }
+
+  #triangle {
+    scale: 0.7;
+  }
+
+  .choices {
+    min-width: 0;
+    width: auto;
+  }
+  .choice3-container {
+    min-width: 0;
+    width: auto;
+  }
+
+  #line1 {
+    margin-bottom: 0;
+  }
+
+  .playground {
+    scale: 0.6;
+  }
+
+  @keyframes wave {
+    0% {
+      width: 100px;
+      height: 100px;
+      background-color: rgb(255, 255, 255, 0.9);
+    }
+    12.5% {
+      width: 115px;
+      height: 115px;
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+
+    25% {
+      width: 125px;
+      height: 125px;
+      background-color: rgba(255, 255, 255, 0.7);
+    }
+
+    37.5% {
+      width: 133px;
+      height: 133px;
+      background-color: rgba(255, 255, 255, 0.6);
+    }
+
+    50% {
+      width: 150px;
+      height: 150px;
+      background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    62.5% {
+      width: 163px;
+      height: 163px;
+      background-color: rgba(255, 255, 255, 0.4);
+    }
+
+    75% {
+      width: 175px;
+      height: 175px;
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    87.5% {
+      width: 187px;
+      height: 187px;
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    95% {
+      width: 200px;
+      height: 200px;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    100% {
+      width: 213px;
+      height: 213px;
+      background-color: rgba(255, 255, 255, 0.05);
+    }
+  }
+
+  #rules-btn {
+    scale: 0.75;
   }
 }
